// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a Button with a size override 1`] = `
<button
  className="btn btn-lg btn-primary text-uppercase"
  onClick={[Function]}
>
  Button Title
</button>
`;

exports[`Button renders a Dark Button without crashing 1`] = `
<button
  className="btn btn-outline-dark text-uppercase"
  onClick={[Function]}
>
  Button Title
</button>
`;

exports[`Button renders a Default Button with deprecated properties 1`] = `
<button
  className="btn btn-primary text-uppercase"
  onClick={[Function]}
>
  Button Title
</button>
`;

exports[`Button renders a Default Button without crashing 1`] = `
<button
  className="btn btn-primary text-uppercase"
  onClick={[Function]}
>
  Button Title
</button>
`;

exports[`Button renders a Light Button without crashing 1`] = `
<button
  className="btn btn-outline-light text-uppercase"
  onClick={[Function]}
>
  Button Title
</button>
`;

exports[`Button renders a Link Button without crashing 1`] = `
<button
  className="btn btn-link"
  onClick={[Function]}
>
  Button Title
</button>
`;
